# cookiecutter-hypermodern-python

.github/workflows/: tests.yml
{{cookiecutter.project_name}}/: .gitignore  .pre-commit-config.yaml  noxfile.py  pyproject.toml
{{cookiecutter.project_name}}/.github/workflows/: tests.yml
{{cookiecutter.project_name}}/src/{{cookiecutter.package_name}}/: __main__.py
